неправильно подбивались ссылки на внутренние метки разделов. fix

--- a/pages/dva_spiska_predmetov_0097.html
+++ b/pages/dva_spiska_predmetov_0097.html
@@ -72,7 +72,7 @@ i<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">0</span><b
 <span class="Monokai-Koperator">end</span><br/>
 </div>
 <p>
-Можно написать универсальные локации для каждого из этих алгоритмов и использовать их, когда нужно. Для подробностей см. <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_02_gosub" style="text-decoration:none;" class="emFOLD">оператор `gosub`</a>.
+Можно написать универсальные локации для каждого из этих алгоритмов и использовать их, когда нужно. Для подробностей см. <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0176.html#faq_80_02_gosub" style="text-decoration:none;" class="emFOLD">оператор `gosub`</a>.
 </p>
 <p>
 Если вам нужно более двух списков предметов, то заводить отдельный массив на каждый неразумно. Проще завести два массива:
