--- a/pages/kak_peredavat__lokatsijam-punktam_menju_argumenty_0022.html
+++ b/pages/kak_peredavat__lokatsijam-punktam_menju_argumenty_0022.html
@@ -58,7 +58,7 @@ $меню_отвёртка<span class="Monokai-Operator">[</span><span class="Mo
 Этот вариант не будет работать, если меню формируется динамически, т.е. пункты в него добавляются или удаляются по мере прохождения игры, или в зависимости от условий. Тем не менее вы можете узнать, какой именно пункт меню вызвал данную локацию, используя простое решение, предложенное `Werewolf`ом.
 </p>
 <a id="faq_04_04_01" name="faq_04_04_01"></a><p>
-Так или иначе вам приходится помещать все пункты меню в массив<a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_04_04_02" style="text-decoration:none;" class="emFOLD">*</a>:
+Так или иначе вам приходится помещать все пункты меню в массив<a href="https://aleksversus.github.io/howdo_faq/pages/kak_peredavat__lokatsijam-punktam_menju_argumenty_0022.html#faq_04_04_02" style="text-decoration:none;" class="emFOLD">*</a>:
 </p>
 <div class="Monokai-Code">
 $menu_stone<span class="Monokai-Operator">[</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'Осмотреть:menu_stone'</span><br/>
@@ -140,7 +140,7 @@ $object<span class="Monokai-Operator">=</span><span class="Monokai-Func">$selobj
 Таким образом через глобальные переменные мы можем передавать некоторые данные локациям-пунктам меню.
 </p>
 <hr class="em_HR" /><a id="faq_04_04_02" name="faq_04_04_02"></a><p>
-<a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_04_04_01" style="text-decoration:none;" class="emFOLD">↑</a> Запись `$меню_предмет<a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_04_05" style="text-decoration:none;" class="emFOLD">]=` означает, что данные будут записаны в следующую ячейку после последней. Это аналог записи `$меню_предмет[arrsize('$меню_предмет')]=`. См. [Как сделать контекстное меню</a></p>
+<a href="https://aleksversus.github.io/howdo_faq/pages/kak_peredavat__lokatsijam-punktam_menju_argumenty_0022.html#faq_04_04_01" style="text-decoration:none;" class="emFOLD">↑</a> Запись `$меню_предмет<a href="https://aleksversus.github.io/howdo_faq/pages/kak_delat__kontekstnoe_menju_0023.html#faq_04_05" style="text-decoration:none;" class="emFOLD">]=` означает, что данные будут записаны в следующую ячейку после последней. Это аналог записи `$меню_предмет[arrsize('$меню_предмет')]=`. См. [Как сделать контекстное меню</a></p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_sdelat__menju_v_ssylkah_0021.html" class="emHREFTT">&lt; Назад, к странице 22</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_delat__kontekstnoe_menju_0023.html" class="emHREFTT">Вперёд, к странице 24 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
