--- a/pages/kak_sdelat__plejlist_0035.html
+++ b/pages/kak_sdelat__plejlist_0035.html
@@ -17,7 +17,7 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_zatsiklit__melodiju_0034.html" class="emHREFTT">&lt; Назад, к странице 35</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_delat__giperssylki_0036.html" class="emHREFTT">Вперёд, к странице 37 &gt;</a></div></div>
 <h3 id="faq_06_07">6.7. Как сделать плейлист?</h3><p>
-Прежде, чем приступить к прочтению данной статьи, ознакомьтесь со статьёй <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_06_06" style="text-decoration:none;" class="emFOLD">"Как зациклить мелодию?"</a>.
+Прежде, чем приступить к прочтению данной статьи, ознакомьтесь со статьёй <a href="https://aleksversus.github.io/howdo_faq/pages/kak_zatsiklit__melodiju_0034.html#faq_06_06" style="text-decoration:none;" class="emFOLD">"Как зациклить мелодию?"</a>.
 </p>
 <p>
 Если вы поняли, как зациклить одну мелодию, а то и как зациклить мелодию для проигрывания на отдельной локации, то смело переходите к следующим примерам и решениям.
