--- a/pages/kak_sdelat__raznye_menju_0020.html
+++ b/pages/kak_sdelat__raznye_menju_0020.html
@@ -39,7 +39,7 @@ $меню_апельсин<span class="Monokai-Operator">[</span><span class="Mo
 $меню_апельсин<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">2</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">"Выбросить:put_orange"</span><br/>
 </div>
 <p>
-Само собой необходимо создать локации для каждого из этих пунктов. И на каждой локации прописать нужный код (см. <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_04_01" style="text-decoration:none;" class="emFOLD">"Как сделать меню предмета?"</a>.
+Само собой необходимо создать локации для каждого из этих пунктов. И на каждой локации прописать нужный код (см. <a href="https://aleksversus.github.io/howdo_faq/pages/kak_sdelat__menju_predmeta_0019.html#faq_04_01" style="text-decoration:none;" class="emFOLD">"Как сделать меню предмета?"</a>.
 </p>
 <p>
 Осталось только прописать вызов меню на локации-обработчике выделения предмета (название которой прописано в `$onobjsel`):
