--- a/pages/mozhno_li_vstavit__v_igru_gif-fajl_0045.html
+++ b/pages/mozhno_li_vstavit__v_igru_gif-fajl_0045.html
@@ -39,7 +39,7 @@
 Если изображение не отображается в указанном месте даже в виде разбитого квадрата, скорее всего плеер не поддерживает данный формат.
 </p>
 <p>
-Если у вас проблемы с воспроизведением gif-анимации, посмотрите список тем в разделе источников: <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#link_09_02" style="text-decoration:none;" class="emFOLD">перейти к разделу</a>
+Если у вас проблемы с воспроизведением gif-анимации, посмотрите список тем в разделе источников: <a href="https://aleksversus.github.io/howdo_faq/pages/ssylki_0181.html#link_09_02" style="text-decoration:none;" class="emFOLD">перейти к разделу</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_vstavit__kartinku_v_igru_0044.html" class="emHREFTT">&lt; Назад, к странице 45</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/kak_vstavit__kartinku_v_dejstvie_0046.html" class="emHREFTT">Вперёд, к странице 47 &gt;</a></div></div>
 <!-- body end -->
