--- a/pages/qsp-keyword_0175.html
+++ b/pages/qsp-keyword_0175.html
@@ -122,7 +122,7 @@ warrior<span class="Monokai-Operator">*=</span><span class="Monokai-Numeric">2</
 <span class="Monokai-Numeric">37</span><span class="Monokai-Operator">+</span><span class="Monokai-Numeric">100</span>&nbsp;<span class="Monokai-Operator">&amp;&nbsp;</span><span class="Monokai-Comment">!&nbsp;вернёт&nbsp;137</span><br/>
 </div>
 <p>
-	Можно "суммировать" и текстовые значения. В этом случае операция работает как <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_01_concatenation" style="text-decoration:none;" class="emFOLD">конкатенация</a>:
+	Можно "суммировать" и текстовые значения. В этом случае операция работает как <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0175.html#faq_80_01_concatenation" style="text-decoration:none;" class="emFOLD">конкатенация</a>:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;на&nbsp;экран&nbsp;будет&nbsp;выведена&nbsp;строка&nbsp;"2627"</span><br/>
@@ -153,7 +153,7 @@ warrior<span class="Monokai-Operator">=</span>warrior<span class="Monokai-Operat
 warrior<span class="Monokai-Operator">+=</span><span class="Monokai-Numeric">15</span><br/>
 </div>
 <p>
-	Возможно так же проводить инкремент со строковыми значениями, работает как <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_01_concatenation" style="text-decoration:none;" class="emFOLD">конкатенация</a>:
+	Возможно так же проводить инкремент со строковыми значениями, работает как <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0175.html#faq_80_01_concatenation" style="text-decoration:none;" class="emFOLD">конкатенация</a>:
 </p>
 <div class="Monokai-Code">
 $text<span class="Monokai-Operator">+=</span><span class="Monokai-String">"&nbsp;(может&nbsp;быть&nbsp;тут&nbsp;что-то&nbsp;написано)"</span><br/>
@@ -635,7 +635,7 @@ alukard<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1000
 <span class="Monokai-Operator">(</span><span class="Monokai-String">"26"</span>&nbsp;<span class="Monokai-Operator">&amp;</span>&nbsp;<span class="Monokai-String">"27"</span><span class="Monokai-Operator">)</span><br/>
 </div>
 <p>
-	Не рекомендуется использовать данную операцию для объединения строк, поскольку строки можно объединять через <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_01_add" style="text-decoration:none;" class="emFOLD">`+`</a>:
+	Не рекомендуется использовать данную операцию для объединения строк, поскольку строки можно объединять через <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0175.html#faq_80_01_add" style="text-decoration:none;" class="emFOLD">`+`</a>:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;на&nbsp;экран&nbsp;будет&nbsp;выведена&nbsp;строка&nbsp;"2627"</span><br/>
