--- a/pages/qsp-keyword_0176.html
+++ b/pages/qsp-keyword_0176.html
@@ -394,7 +394,7 @@ DEL&nbsp;<span class="Monokai-Func">OBJ</span>&nbsp;<span class="Monokai-Operato
 "</span><span class="Monokai-Operator">,</span><span class="Monokai-String">'Текст'</span><span class="Monokai-Operator">,</span><span class="Monokai-String">'Вилка'</span><br/>
 </div>
 <p>
-	Нижеследующая информация справедлива и для функции `dyneval` (см. <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_03_dyneval" style="text-decoration:none;" class="emFOLD">соответствующий раздел</a>).
+	Нижеследующая информация справедлива и для функции `dyneval` (см. <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0177.html#faq_80_03_dyneval" style="text-decoration:none;" class="emFOLD">соответствующий раздел</a>).
 </p>
 <p>
 	Важно! Если код задан с помощью одинарных (`''`) или двойных (`""`) кавычек, в тексте вычисляются подвыражения:
@@ -785,7 +785,7 @@ $code&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Ope
 <span class="Monokai-Operator">JUMP</span>&nbsp;<span class="Monokai-Operator">[</span>$метка<span class="Monokai-Operator">]</span><br/>
 </div>
 <p>
-	, где `<a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_05_marks" style="text-decoration:none;" class="emFOLD">$метка]` — это метка ниже или выше по коду (см. раздел ["Метки"</a>).
+	, где `<a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_marks" style="text-decoration:none;" class="emFOLD">$метка]` — это метка ниже или выше по коду (см. раздел ["Метки"</a>).
 </p>
 <p>
 	`jump` находит метку только в пределах текущего блока кода, то есть метки локальны.
@@ -1086,7 +1086,7 @@ $usr_menu<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">3<
 <span class="Monokai-Operator">opengame</span><br/>
 </div>
 <p>
-	См. также локацию-обработчик события загрузки состояния игры (<a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_04_ongload" style="text-decoration:none;" class="emFOLD">$ongload</a>).
+	См. также локацию-обработчик события загрузки состояния игры (<a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0178.html#faq_80_04_ongload" style="text-decoration:none;" class="emFOLD">$ongload</a>).
 </p>
 <h4 id="faq_80_02_openqst">OPENQST</h4><p>
 `OPENQST` — открытие и запуск указанного файла игры. Общая запись:
@@ -1191,7 +1191,7 @@ $file<span class="Monokai-Operator">=</span><span class="Monokai-String">"melody
 <span class="Monokai-Operator">savegame</span><br/>
 </div>
 <p>
-	См. также <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_04_ongsave" style="text-decoration:none;" class="emFOLD">локацию-обработчик события сохранения состояния игры ($ongsave)</a>.
+	См. также <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0178.html#faq_80_04_ongsave" style="text-decoration:none;" class="emFOLD">локацию-обработчик события сохранения состояния игры ($ongsave)</a>.
 </p>
 <h4 id="faq_80_02_set">SET</h4><p>
 `SET` — устаревший оператор для установки значения переменной. Общая запись:
