--- a/pages/qsp-keyword_0177.html
+++ b/pages/qsp-keyword_0177.html
@@ -92,7 +92,7 @@ $actlist<span class="Monokai-Operator">=</span><span class="Monokai-Func">$curac
 	Результат функции равен значению `$result` при возврате строкового значения или `result` при возврате числового значения. если при выполнении кода были установлены и `result`, и `$result`, то предпочтение отдаётся строковому значению. После выполнения кода предыдущие значения `args` и `result` восстанавливаются, затем продолжается выполнение кода после `dyneval`.
 </p>
 <p>
-	См. также <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_02_dynamic" style="text-decoration:none;" class="emFOLD">оператор `DYNAMIC`</a>.
+	См. также <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0176.html#faq_80_02_dynamic" style="text-decoration:none;" class="emFOLD">оператор `DYNAMIC`</a>.
 </p>
 <h4 id="faq_80_03_func">$FUNC (FUNC)</h4><p>
 `FUNC` —  выполнение кода указанной локации без непосредственного перехода на неё с возвращением значения.
@@ -430,13 +430,13 @@ $text_new<span class="Monokai-Operator">=</span><span class="Monokai-Func">$repl
 	Следует помнить, что выделение действия происходит при наведении на него указателя мыши, а не при непосредственном нажатии.
 </p>
 <p>
-	Пример использования можно посмотреть в разделе <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_04_onactsel" style="text-decoration:none;" class="emFOLD">`$onactsel`</a>
+	Пример использования можно посмотреть в разделе <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0178.html#faq_80_04_onactsel" style="text-decoration:none;" class="emFOLD">`$onactsel`</a>
 </p>
 <h4 id="faq_80_03_selobj">$SELOBJ</h4><p>
 `$SELOBJ` —  возвращает название выделенного предмета в любом месте игры. Выделение предмета происходит в момент нажатия (щелчка мышью по предмету) и не снимается до применения команды `unselect`.
 </p>
 <p>
-	Пример использования можно посмотреть в разделе <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_04_onobjsel" style="text-decoration:none;" class="emFOLD">`$onobjsel`</a>
+	Пример использования можно посмотреть в разделе <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0178.html#faq_80_04_onobjsel" style="text-decoration:none;" class="emFOLD">`$onobjsel`</a>
 </p>
 <h4 id="faq_80_03_stattxt">$STATTXT</h4><p>
 `$STATTXT` —  возвращает текст, выведенный в окно дополнительного описания. Может быть полезна для замены части текста в окне дополнительного описания.
