--- a/pages/qsp-keyword_0179.html
+++ b/pages/qsp-keyword_0179.html
@@ -90,7 +90,7 @@
 <span class="Monokai-Koperator">end</span>&nbsp;присутствие&nbsp;этого&nbsp;текста&nbsp;после&nbsp;<span class="Monokai-Koperator">end</span>&nbsp;не&nbsp;одобряется&nbsp;<span class="Monokai-Operator">&amp;</span>&nbsp;<span class="Monokai-Operator">*</span><span class="Monokai-Operator">pl</span>&nbsp;<span class="Monokai-String">"Новая&nbsp;команда"</span><br/>
 </div>
 <h4 id="faq_80_05_marks">Метки `:`</h4><p>
-Метки — это особые синтаксические конструкции (а вернее меньше, чем конструкции, — синтаксемы), которые отмечают указанную строку кода и служат для быстрого перемещения к таким строкам с помощью оператора <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_02_jump" style="text-decoration:none;" class="emFOLD">`JUMP`</a>. Общая запись:
+Метки — это особые синтаксические конструкции (а вернее меньше, чем конструкции, — синтаксемы), которые отмечают указанную строку кода и служат для быстрого перемещения к таким строкам с помощью оператора <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0176.html#faq_80_02_jump" style="text-decoration:none;" class="emFOLD">`JUMP`</a>. Общая запись:
 </p>
 <div class="Monokai-Code">
 <span class="Monokai-Operator">:</span><span class="Monokai-Operator">[</span>название&nbsp;метки<span class="Monokai-Operator">]</span><br/>
@@ -158,7 +158,7 @@
 <span class="Monokai-Operator">[</span>команда&nbsp;<span class="Monokai-Numeric">1</span><span class="Monokai-Operator">]</span>&nbsp;<span class="Monokai-Operator">&amp;</span>&nbsp;<span class="Monokai-Operator">[</span>команда&nbsp;<span class="Monokai-Numeric">2</span><span class="Monokai-Operator">]</span>&nbsp;<span class="Monokai-Operator">&amp;</span>&nbsp;...<br/>
 </div>
 <p>
-	Данный символ не следует путать с <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_01_concatenation" style="text-decoration:none;" class="emFOLD">операцией объединения строк (конкатенация)</a>, а использовать нужно с осторожностью.
+	Данный символ не следует путать с <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0175.html#faq_80_01_concatenation" style="text-decoration:none;" class="emFOLD">операцией объединения строк (конкатенация)</a>, а использовать нужно с осторожностью.
 </p>
 <p>
 	Примеры:
