--- a/pages/razlozhenie_na_slagaemye_0144.html
+++ b/pages/razlozhenie_na_slagaemye_0144.html
@@ -148,7 +148,7 @@ summ&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Nume
 Обе эти ошибки не должны приводить к зацикливанию, но их всё равно стоит избегать.
 </p>
 <p>
-См. так же: <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_20_09" style="text-decoration:none;" class="emFOLD">тянем карту из колоды</a>, <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_20_10" style="text-decoration:none;" class="emFOLD">сортировка данных</a>.
+См. так же: <a href="https://aleksversus.github.io/howdo_faq/pages/tjanem_kartu_iz_kolody_0141.html#faq_20_09" style="text-decoration:none;" class="emFOLD">тянем карту из колоды</a>, <a href="https://aleksversus.github.io/howdo_faq/pages/sortirovka_dannyh_0142.html#faq_20_10" style="text-decoration:none;" class="emFOLD">сортировка данных</a>.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/protsenty_0143.html" class="emHREFTT">&lt; Назад, к странице 142</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/razrezhenie_teksta_0145.html" class="emHREFTT">Вперёд, к странице 144 &gt;</a></div></div>
 <!-- body end -->
