--- a/pages/tjanem_kartu_iz_kolody_0141.html
+++ b/pages/tjanem_kartu_iz_kolody_0141.html
@@ -136,7 +136,7 @@ deck<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">5</span
 <span class="Monokai-Koperator">end</span><br/>
 </div>
 <p>
-Посмотрите так же предложенные решения по <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#link_20_09" style="text-decoration:none;" class="emFOLD">ссылкам</a>.
+Посмотрите так же предложенные решения по <a href="https://aleksversus.github.io/howdo_faq/pages/ssylki_0181.html#link_20_09" style="text-decoration:none;" class="emFOLD">ссылкам</a>.
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/sravnenie_massivov_0140.html" class="emHREFTT">&lt; Назад, к странице 139</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/sortirovka_dannyh_0142.html" class="emHREFTT">Вперёд, к странице 141 &gt;</a></div></div>
 <!-- body end -->
