--- a/pages/v_chiom_raznitsa_mezhdu_goto_i_gosub_0009.html
+++ b/pages/v_chiom_raznitsa_mezhdu_goto_i_gosub_0009.html
@@ -39,7 +39,7 @@
 <li>Плеер "переходит" на указанную локацию. Технически это означает, что функция `$curloc` будет возвращать название локации, на которую был осуществлён "переход".</li>
 <li>При переходе по `goto` плеер очищает окно основного описания и окно действий.</li>
 <li>Далее плеер выводит в окно основного описания "Базовое описание", а в окно действий — "базовые действия". После чего выполняет код из поля "Выполнить при посещении".</li>
-<li>Закончив выполнять код из поля "Выполнить при посещении", плеер (опционально) выполняет код из локации-обработчика события "переход на новую локацию" (см. <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_80_04_onnewloc" style="text-decoration:none;" class="emFOLD">`onNewLoc`</a>), а затем перестаёт что-либо делать и ждёт участия игрока.</li>
+<li>Закончив выполнять код из поля "Выполнить при посещении", плеер (опционально) выполняет код из локации-обработчика события "переход на новую локацию" (см. <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0178.html#faq_80_04_onnewloc" style="text-decoration:none;" class="emFOLD">`onNewLoc`</a>), а затем перестаёт что-либо делать и ждёт участия игрока.</li>
 </ol>
 <p>
 Таким образом, если после команды `goto` были написаны ещё какие-то команды, эти команды плеер не выполняет, так как уже "находится" на другой локации.
