--- a/informarch/soderzhanie_0000.html
+++ b/informarch/soderzhanie_0000.html
@@ -17,66 +17,66 @@
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div>&nbsp;</div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html" class="emHREFTT">Вперёд, к странице 2 &gt;</a></div></div>
 <h3 id="informarch_soderzhanije">Содержание</h3><h4 id="bol_shoj-sbornik-poleznyh-ssylok-i-zakladok">Большой сборник полезных ссылок и закладок</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a></li>
 </ul>
 <h4 id="chto-takoe-qsp">Что такое QSP</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a></li>
 </ul>
 <h4 id="obschie-voprosy-i-resheniia">Общие вопросы и решения</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_24_02" style="text-decoration:none;" class="emFOLD">Распространяемая сборка игры на класическом плеере</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html#faq_24_02" style="text-decoration:none;" class="emFOLD">Распространяемая сборка игры на класическом плеере</a></li>
 </ul>
 <h4 id="prodvinutyj-qsp">Продвинутый QSP</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a></li>
 </ul>
 <h4 id="rabota-v-tekstovom-redaktore">Работа в текстовом редакторе</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a></li>
 <li><a href="#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a></li>
 </ul>
 <h4 id="voprosy-po-programmirovaniiu">Вопросы по программированию</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a></li>
 </ul>
 <h4 id="obnovleniia-pleera">Обновления плеера</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a></li>
 </ul>
 <h4 id="voprosy-po-quest-navigator">Вопросы по Quest Navigator</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_01" style="text-decoration:none;" class="emFOLD">Шаблоны оформления для игр</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_02" style="text-decoration:none;" class="emFOLD">Как подключить свой шрифт к игре?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_03" style="text-decoration:none;" class="emFOLD">Как изменять цвет фона игры?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_04" style="text-decoration:none;" class="emFOLD">Как прописать игре собственный курсор?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_05" style="text-decoration:none;" class="emFOLD">Как редактировать шаблон?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_06" style="text-decoration:none;" class="emFOLD">Как узнать, что игра запущена на Навигаторе?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_07" style="text-decoration:none;" class="emFOLD">Как вставить видео в игру?</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_08" style="text-decoration:none;" class="emFOLD">Как сделать standalone-сборку</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_09" style="text-decoration:none;" class="emFOLD">Размер окна с игрой</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_10" style="text-decoration:none;" class="emFOLD">Запуск JavaScript из кода игры</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#faq_22_11" style="text-decoration:none;" class="emFOLD">Полная смена оформления из кода игры</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/shablony_oformlenija_dlja_igr_0032.html#faq_22_01" style="text-decoration:none;" class="emFOLD">Шаблоны оформления для игр</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_podkljuchit__svoj_shrift_0033.html#faq_22_02" style="text-decoration:none;" class="emFOLD">Как подключить свой шрифт к игре?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_izmenit__tsvet_fona_0034.html#faq_22_03" style="text-decoration:none;" class="emFOLD">Как изменять цвет фона игры?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/izmenit__kursor_0035.html#faq_22_04" style="text-decoration:none;" class="emFOLD">Как прописать игре собственный курсор?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/nastrojka_shablona_0036.html#faq_22_05" style="text-decoration:none;" class="emFOLD">Как редактировать шаблон?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/proverka_pleera_0037.html#faq_22_06" style="text-decoration:none;" class="emFOLD">Как узнать, что игра запущена на Навигаторе?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/video_0038.html#faq_22_07" style="text-decoration:none;" class="emFOLD">Как вставить видео в игру?</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_0039.html#faq_22_08" style="text-decoration:none;" class="emFOLD">Как сделать standalone-сборку</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/razmer_okna_igry_0040.html#faq_22_09" style="text-decoration:none;" class="emFOLD">Размер окна с игрой</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/vypolnenie_js_iz_qsp-koda_0041.html#faq_22_10" style="text-decoration:none;" class="emFOLD">Запуск JavaScript из кода игры</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html#faq_22_11" style="text-decoration:none;" class="emFOLD">Полная смена оформления из кода игры</a></li>
 </ul>
 <h4 id="voprosy-po-aeroqsp">Вопросы по AeroQSP</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a></li>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a></li>
 </ul>
 <h4 id="obzory-igr">Обзоры игр</h4><ul>
-<li><a href="https://aleksversus.github.io/howdo_faq/informarch/None.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a></li>
+<li><a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a></li>
 </ul>
 <div style="display:flex;justify-content:space-between;"><div>&nbsp;</div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html" class="emHREFTT">Вперёд, к странице 2 &gt;</a></div></div>
 <!-- body end -->
