--- a/pages/ne_rabotajut_tegi_map_i_area_0078.html
+++ b/pages/ne_rabotajut_tegi_map_i_area_0078.html
@@ -60,7 +60,7 @@
 Обратите внимание, при наведении на кликабельную область в классическом плеере курсор не будет менять свой внешний вид.
 </p>
 <p>
-Более подробно о том, как работать с тегами `MAP` и `AREA` вы можете прочитать в разделе <a href="https://aleksversus.github.io/howdo_faq/pages/None.html#faq_16_10" style="text-decoration:none;" class="emFOLD">16.10. Как работать с тегами MAP и AREA?</a>
+Более подробно о том, как работать с тегами `MAP` и `AREA` вы можете прочитать в разделе <a href="https://aleksversus.github.io/howdo_faq/pages/map_area_0113.html#faq_16_10" style="text-decoration:none;" class="emFOLD">16.10. Как работать с тегами MAP и AREA?</a>
 </p>
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/pages/ne_rabotaet_iif_0077.html" class="emHREFTT">&lt; Назад, к странице 78</a></div><div><a href="https://aleksversus.github.io/howdo_faq/pages/ne_rabotaet_zviozdochka-pl_v_dejstvii_0079.html" class="emHREFTT">Вперёд, к странице 80 &gt;</a></div></div>
 <!-- body end -->
