--- a/pages/qsp-keyword_0180.html
+++ b/pages/qsp-keyword_0180.html
@@ -50,7 +50,7 @@
 <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_roundbrackets" style="text-decoration:none;" class="emFOLD">() (круглые скобки)</a>
 </p>
 <p>
-<a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_squarebrackets" style="text-decoration:none;" class="emFOLD">&#91;&#93; (квадратные скобки)</a> /<em> соответствующие цифровые коды квадратных скобок </em>/
+<a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_squarebrackets" style="text-decoration:none;" class="emFOLD">&#91;&#93; (квадратные скобки)</a> 
 </p>
 <p>
 <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0175.html#faq_80_01_multi" style="text-decoration:none;" class="emFOLD">*</a>
